# esp32-plane-radar

./: .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults
.github/workflows/: build.yml  release.yml
boards/: waveshare_esp32_s3_touch_lcd_2_1.json
idf/: CMakeLists.txt  sdkconfig.defaults
idf/main/: CMakeLists.txt  Kconfig.projbuild  main.c
idf/main/EXIO/: TCA9554PWR.c  TCA9554PWR.h
idf/main/LCD_Driver/: ST7701S.c  ST7701S.h
idf/main/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h  lv_port_mem.c  lv_port_mem.h
idf/main/Touch_Driver/: CST820.c  CST820.h
idf/main/radar/: aircraft_type_db.c  aircraft_type_db.h  radar_aircraft.c  radar_aircraft.h  radar_ginfo.c  radar_ginfo.h  radar_lvgl_fs.c  radar_lvgl_fs.h  radar_photo.c  radar_photo.h  radar_range.c  radar_range.h  radar_storage.c  radar_storage.h  radar_ui.c  radar_ui.h  radar_wifi.c  radar_wifi.h
include/: config.h
include/hardware/: display.h  display_font.h  lgfx_config.hpp  st7701_waveshare_init.hpp  touch.h
include/services/: radar_location.h
include/ui/: radar_display.h  radar_range.h  radar_theme.h
main/: CMakeLists.txt
src/: esp_idf_entry.cpp  main.cpp
src/hardware/: display.cpp  display_font.cpp  touch.cpp
src/services/: radar_location.cpp  wifi_setup.cpp
src/ui/: radar_display.cpp  radar_range.cpp  status_screens.cpp
tools/: README.md  build_radar_sd_database.py  cache_wikimedia_photo.py  merge_registry_sources.py  radar_photo_proxy.py
